--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=layoutfix1" />
+  <link rel="stylesheet" href="styles.css?v=cm1" />
 </head>
 <body>
 
@@ -31,9 +31,9 @@
       <div class="hero-inner">
         <h1>Free Indicators. No Pitch.</h1>
         <p>
-          A quiet corner of the internet for traders who prefer clear logic over paywalls. Every indicator here is
-          free to use on TradingView and comes with plain-English documentation, transparent inputs, and a direct link
-          to the official script page.
+          A quiet corner of the internet for traders who don’t believe basic indicators should cost a fortune.
+          Every indicator here is free to use on TradingView and documented in plain English — what it does, how it works,
+          and when it actually helps — without paywalls, upsells, or mystique.
         </p>
         <a href="#indicators" class="btn-primary">Browse indicators</a>
       </div>
@@ -84,21 +84,83 @@
       </div>
     </section>
 
+    <!-- ABOUT -->
     <section id="about" class="section">
       <div class="container">
         <h2>About Open Indicator Lab</h2>
+
         <p>
-          Most trading indicator pages are built to sell you something or hide the logic behind buzzwords. Open Indicator Lab is the opposite:
-          it documents useful tools for traders in a clean, neutral format, with a focus on clarity instead of hype.
+          Open Indicator Lab exists to document how commonly used trading indicators actually work.
+          Over time, many standard technical ideas — moving averages, momentum oscillators, volatility measures —
+          have been repackaged, branded, and marketed as proprietary systems. While tools are often explained at a surface level,
+          the underlying mechanics are rarely discussed in detail. This site focuses on what’s under the hood.
         </p>
+
+        <p><strong>What We Believe</strong></p>
+        <ul>
+          <li>Traders should understand the tools they use</li>
+          <li>Basic technical concepts shouldn’t require expensive subscriptions</li>
+          <li>Clarity is more useful than complexity</li>
+          <li>Education matters more than presentation</li>
+        </ul>
+
+        <p><strong>What This Site Does</strong></p>
+        <ul>
+          <li>What the indicator actually measures</li>
+          <li>How it’s constructed at a conceptual level</li>
+          <li>When it tends to help</li>
+          <li>When it tends to fail</li>
+          <li>How traders commonly recreate similar behavior manually</li>
+        </ul>
+
+        <hr class="doc-divider" />
+
+        <p><strong>Open Indicator Lab is not a signal service, a paid course, or a promise of profitability.</strong></p>
+        <p>We don’t provide alerts, trade calls, or shortcuts.</p>
+        <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
+        <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
+      </div>
+    </section>
+
+    <!-- COMMON MISCONCEPTIONS (Option A) -->
+    <section id="misconceptions" class="section">
+      <div class="container">
+        <h2>Common Misconceptions</h2>
+
+        <p><strong>“Proprietary” means unique or complex.</strong></p>
         <p>
-          The goal is to explain what an indicator actually does, where it tends to help, and where it can mislead you — so you can decide whether it belongs
-          in your process. Part of that is giving traders well-documented alternatives to expensive “secret sauce” indicators that often boil down to
-          transparent math or standard data.
+          Often it just means a familiar technical idea packaged into a specific visual layout or preset.
+          Closed-source does not automatically mean fundamentally different.
         </p>
+
+        <p><strong>More complexity means more edge.</strong></p>
         <p>
-          Indicators here are free to use on TradingView. Many are published as protected scripts (the code itself isn’t exposed), but inputs, behavior,
-          and use-cases are documented as openly as possible. Nothing on this site is financial advice, a signal service, or a guarantee of performance.
+          Extra inputs and conditions can make a tool harder to understand and harder to use consistently.
+          Simpler tools can be strong because they’re easier to reason about.
+        </p>
+
+        <p><strong>Institutions use entirely different indicators.</strong></p>
+        <p>
+          Institutions may have different data and execution, but many concepts — trend, momentum, volatility — are the same.
+          Process and context matter more than “secret indicators.”
+        </p>
+
+        <p><strong>Paying for a tool guarantees better results.</strong></p>
+        <p>
+          Buying an indicator can feel like progress, but ownership doesn’t create understanding.
+          Without knowing what it measures and when it fails, price doesn’t help.
+        </p>
+
+        <p><strong>Indicators are meant to give signals.</strong></p>
+        <p>
+          Most tools are best used as context filters — trend bias, momentum conditions, volatility regime —
+          not as stand-alone buy/sell systems.
+        </p>
+
+        <p><strong>If it’s popular, it must be superior.</strong></p>
+        <p>
+          Popularity often reflects marketing reach and presentation.
+          Understanding how the indicator works matters more than how widely it’s promoted.
         </p>
       </div>
     </section>
