--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=layoutfix1" />
+  <link rel="stylesheet" href="../styles.css?v=FULLTEXT1" />
 </head>
 <body>
 
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <div class="top-shelf"></div>
+  <div class="top-shelf" aria-hidden="true"></div>
 
   <main class="section section-doc">
     <div class="container">
@@ -37,9 +37,20 @@
 
       <h1>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets</h1>
 
-      <p class="section-intro">
-        Many traders enjoy experimenting with dual-moving-average “trend ribbon” structures that resemble the visual style of popular tools such as the Larsson Line.
-        This indicator provides a flexible, well-documented version of that style for TradingView. The indicator is free to use; the script is protected.
+      <!-- CONTEXT (locked-in version) -->
+      <p>
+        Many traders encounter dual-moving-average “trend ribbon” indicators through popular tools such as the Larsson Line,
+        often sold at price points that put them out of reach for many retail traders.
+      </p>
+
+      <p>
+        At a conceptual level, most trend-ribbon indicators are built around a simple idea: plotting two smoothed moving averages
+        and observing how they interact to define trend direction.
+      </p>
+
+      <p>
+        This page explains that structure in plain language and provides a free implementation for study and experimentation.
+        The indicator is free to use on TradingView; the script is protected.
       </p>
 
       <div class="doc-actions">
@@ -49,6 +60,7 @@
         </a>
       </div>
 
+      <!-- Screenshot -->
       <a class="chart-shot"
          href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/"
          target="_blank" rel="noopener">
@@ -59,7 +71,8 @@
       <h2>How Traders Recreate This Without the Indicator</h2>
 
       <p>
-        At its core, the different “Larsson-style” trend ribbons are based on a very simple idea: plotting two smoothed moving averages and observing how they interact over time.
+        At its core, the different “Larsson-style” trend ribbons are based on a very simple idea:
+        plotting two smoothed moving averages and observing how they interact over time.
       </p>
 
       <p>
@@ -70,39 +83,87 @@
         <li>Add a <strong>Smoothed Moving Average (SMMA)</strong> to your chart.</li>
         <li>Set its length to <strong>15</strong> and leave the remaining inputs at their defaults.</li>
         <li>Add a second SMMA with the length set to <strong>29</strong>.</li>
-        <li>When the faster SMMA (15) moves above the slower SMMA (29), bias is bullish.</li>
-        <li>When the faster SMMA (15) moves below the slower SMMA (29), bias is bearish.</li>
+        <li>When the faster SMMA (15) moves above the slower SMMA (29), the trend bias is bullish.</li>
+        <li>When the faster SMMA (15) moves below the slower SMMA (29), the trend bias is bearish.</li>
       </ol>
 
       <p>
-        Because moving averages lag, this tends to work best on <strong>daily and higher</strong> timeframes and during clear trends.
-        It performs poorly in chop, so many traders combine it with structure/volatility filters for confirmation.
+        Because moving averages are lagging by nature, this tends to work best on <strong>daily and higher</strong> timeframes
+        and during clear directional trends. It performs poorly in sideways markets, which is why many traders combine it with
+        structure/volatility filters and other confirmation tools.
       </p>
 
       <h2>Overview</h2>
 
       <p>
-        This script does not replicate, reverse-engineer, or replace any closed-source indicator. Instead, it provides a flexible framework for exploring
-        trend-ribbon behavior using standard moving-average and ATR concepts.
+        Many traders enjoy experimenting with dual-moving-average “trend ribbon” structures that resemble the visual style of popular tools such as the Larsson Line.
+        While the internal logic of closed-source indicators is not publicly available, the trading community often explores MA combinations like SMMA 15/29 or EMA 30/60
+        with ATR filters to study trend transitions and visualize momentum shifts.
+      </p>
+
+      <p>
+        This script does not replicate, reverse-engineer, or replace any closed-source indicator. Instead, it provides a flexible framework that lets traders build their own
+        trend-ribbon configuration inspired by similar visual concepts while maintaining transparency around inputs and behavior.
       </p>
 
       <h2>What the Script Does</h2>
 
       <ul>
-        <li>Plots fast/slow moving averages using SMMA (RMA), EMA, SMA, or WMA.</li>
-        <li>Colors the ribbon to show directional bias (bullish/bearish/neutral).</li>
-        <li>Optional ATR neutral zone filtering to reduce chop.</li>
-        <li>Optional bar coloring by trend state.</li>
+        <li>Plots Fast and Slow moving averages using the method of your choice: <strong>SMMA (RMA), EMA, SMA, or WMA</strong>.</li>
+        <li>Colors the ribbon to show directional bias:
+          <ul>
+            <li><strong>Bullish</strong> when Fast MA &gt; Slow MA</li>
+            <li><strong>Bearish</strong> when Fast MA &lt; Slow MA</li>
+            <li><strong>Neutral</strong> when the difference is small (optional ATR filter)</li>
+          </ul>
+        </li>
+        <li>Supports ATR-based neutral zone filtering to reduce noise during low momentum / chop.</li>
+        <li>Supports optional bar coloring tied to trend state.</li>
+        <li>Works on all markets and timeframes.</li>
+        <li>Indicator is free to use on TradingView; script is protected.</li>
       </ul>
 
-      <div class="spacer-xl"></div>
       <h2>Why This Script Is Useful</h2>
 
       <p>
-        Traditional moving averages identify trend direction but often lack context during uncertainty. This ribbon adds structure, neutrality filtering, and flexibility for experimenting with settings.
+        Traditional moving averages identify trend direction but often lack context during uncertain or low-momentum conditions.
+        This ribbon framework adds clarity by:
       </p>
 
-      <div class="spacer-xl"></div>
+      <ol>
+        <li>Allowing multiple smoothing techniques (SMMA/EMA/SMA/WMA)</li>
+        <li>Highlighting cleaner trend transitions</li>
+        <li>Identifying low-confidence periods using an ATR neutral zone</li>
+        <li>Providing a visually intuitive ribbon instead of single-line signals</li>
+      </ol>
+
+      <p>
+        Suitable for swing traders, trend followers, breakout traders, and anyone who wants cleaner structure-based contextualization.
+      </p>
+
+      <h2>Popular Community MA Combinations</h2>
+
+      <ul>
+        <li><strong>SMMA 15/29</strong> → smoother structural trend flow</li>
+        <li><strong>EMA 30/60</strong> → more responsive momentum shifts</li>
+        <li><strong>EMA 10/21</strong> → intraday rhythm</li>
+        <li><strong>EMA 50/100</strong> → higher-timeframe structure</li>
+      </ul>
+
+      <p>
+        These examples are commonly used by the community — but this script does not recreate or imitate any closed-source or commercial indicator.
+      </p>
+
+      <h2>How to Use</h2>
+
+      <ol>
+        <li>Choose your preferred MA type</li>
+        <li>Adjust Fast/Slow lengths to match your timeframe</li>
+        <li>Enable ATR Neutral Zone to reduce false flips in chop</li>
+        <li>Optionally enable bar coloring</li>
+        <li>Combine with structure, volume, or price action for decision-making</li>
+      </ol>
+
       <h2>Important Notes</h2>
 
       <ul>
@@ -111,7 +172,12 @@
         <li>Use alongside other technical tools for confluence.</li>
       </ul>
 
-      <div class="spacer-xl"></div>
+      <hr class="doc-divider" />
+
+      <p><strong>Not signals. Not alerts. Not shortcuts.</strong></p>
+      <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
+      <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
+
       <h2>Disclaimer</h2>
 
       <p>
