--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=layoutfix1" />
+  <link rel="stylesheet" href="../styles.css?v=FULLTEXT2" />
 </head>
 <body>
 
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <div class="top-shelf"></div>
+  <div class="top-shelf" aria-hidden="true"></div>
 
   <main class="section section-doc">
     <div class="container">
@@ -37,9 +37,20 @@
 
       <h1>Blended Net Liquidity Correlation</h1>
 
-      <p class="section-intro">
-        This indicator visualizes a customizable net-liquidity model built from public FRED data and calculates correlation between liquidity and price across multiple time windows.
-        The indicator is free to use; the script is protected.
+      <!-- CONTEXT -->
+      <p>
+        Many traders study macro liquidity to understand broader market conditions and potential influences on price.
+        Liquidity-based indicators are often presented as complex or institutional-only, despite relying largely on public data.
+      </p>
+
+      <p>
+        At a conceptual level, most liquidity models attempt to approximate how capital flows through the financial system
+        by combining balance-sheet data, treasury operations, and short-term funding dynamics.
+      </p>
+
+      <p>
+        This page explains that structure in plain language and provides a free implementation for study and experimentation.
+        The indicator is free to use on TradingView; the script is protected.
       </p>
 
       <div class="doc-actions">
@@ -49,6 +60,7 @@
         </a>
       </div>
 
+      <!-- Screenshot -->
       <a class="chart-shot"
          href="https://www.tradingview.com/script/3u6UCRSH-Blended-Net-Liquidity-Correlation/"
          target="_blank" rel="noopener">
@@ -59,41 +71,101 @@
       <h2>How Traders Recreate This Without the Indicator</h2>
 
       <p>
-        Traders can approximate similar views using TradingView symbol math and public macro series. Build expressions, smooth them, and compare against price.
+        You can approximate similar liquidity views manually in TradingView using public data series and symbol math.
+        The platform allows users to add, subtract, and transform series directly.
+      </p>
+
+      <p>
+        A simple approach might involve:
       </p>
 
       <ol>
-        <li>Combine series with math (example style: WALCL − RRP − TGA).</li>
-        <li>Smooth with SMA to reduce noise.</li>
-        <li>Compare against price and test different timeframes/offsets.</li>
+        <li>Combining public balance sheet and liquidity series using symbol math (for example, WALCL − RRP − TGA).</li>
+        <li>Applying smoothing (such as an SMA) to reduce noise.</li>
+        <li>Comparing the resulting series against price on the same chart.</li>
+        <li>Testing different offsets or timeframes to study lead/lag behavior.</li>
       </ol>
+
+      <p>
+        This indicator packages those steps into a structured workflow with configurable components and built-in correlation analysis.
+      </p>
 
       <h2>Overview</h2>
 
       <p>
-        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. The community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks.
+        Liquidity-based models are commonly used to study macro trends across equities, crypto, and other risk assets.
+        While implementations vary, many rely on publicly available data from sources such as the Federal Reserve and U.S. Treasury.
+      </p>
+
+      <p>
+        This script does not replicate or reverse-engineer any commercial macro model.
+        Instead, it provides a transparent framework for exploring how different liquidity components interact
+        and how those dynamics correlate with price over time.
       </p>
 
       <h2>What the Script Does</h2>
 
+      <h3>1. Builds a blended net liquidity model</h3>
       <ul>
-        <li>Builds a blended liquidity model from selectable components.</li>
-        <li>Allows toggles, smoothing, and WALCL weighting.</li>
-        <li>Runs multi-window correlation analysis and highlights the strongest window.</li>
+        <li>Includes selectable components such as WALCL, RRP, TGA, BTFP, ΔTOTLL, and ΔM2.</li>
+        <li>Allows each component to be toggled on or off.</li>
+        <li>Supports adjustable weighting between balance-sheet and flow-based models.</li>
+        <li>Applies optional SMA smoothing to the liquidity series.</li>
+        <li>Supports time-offsetting to study lag effects.</li>
       </ul>
 
-      <div class="spacer-xl"></div>
+      <h3>2. Runs multi-period correlation analysis</h3>
+      <ul>
+        <li>Calculates correlation between liquidity and price over multiple windows.</li>
+        <li>Includes short-term and long-term horizons.</li>
+        <li>Highlights the strongest correlation window automatically.</li>
+      </ul>
+
+      <h3>3. Plots liquidity alongside price</h3>
+      <ul>
+        <li>Uses a clean overlay format.</li>
+        <li>Aligns liquidity trends visually with price structure.</li>
+        <li>Helps contextualize macro conditions rather than generate signals.</li>
+      </ul>
+
       <h2>Why This Script Is Useful</h2>
 
       <p>
-        Liquidity models can help frame broader market context. This tool makes it easier to explore which liquidity components matter most and whether liquidity has tracked price across different time windows.
+        Liquidity models are often discussed abstractly, without clear explanations of what inputs matter or how they affect results.
+        This tool is useful because it:
       </p>
 
-      <div class="spacer-xl"></div>
+      <ol>
+        <li>Breaks macro liquidity into understandable components.</li>
+        <li>Allows experimentation with different model constructions.</li>
+        <li>Quantifies relationships using correlation instead of narrative.</li>
+        <li>Encourages research rather than prediction.</li>
+      </ol>
+
+      <p>
+        This makes it suitable for macro-focused traders, longer-term investors, and anyone studying how systemic liquidity interacts with price.
+      </p>
+
+      <h2>Important Notes</h2>
+
+      <ul>
+        <li>All data is sourced from public FRED datasets.</li>
+        <li>FRED data updates weekly and may revise historical values.</li>
+        <li>Correlation does not imply causation.</li>
+        <li>Liquidity models are approximations, not forecasts.</li>
+      </ul>
+
+      <hr class="doc-divider" />
+
+      <p><strong>Not signals. Not alerts. Not shortcuts.</strong></p>
+      <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
+      <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
+
       <h2>Disclaimer</h2>
 
       <p>
-        Educational use only. This is not financial advice.
+        This indicator is provided for educational and analytical purposes only.
+        Nothing on this page constitutes financial advice or a recommendation to trade.
       </p>
 
     </div>
