--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -37,7 +37,7 @@
 
       <h1>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets</h1>
 
-      <!-- CONTEXT (locked-in version) -->
+      <!-- CONTEXT (lockedin version) -->
       <p>
         Many traders encounter dual-moving-average “trend ribbon” indicators through popular tools such as the Larsson Line,
         often sold at price points that put them out of reach for many retail traders.
