--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <!-- unified cache-busted stylesheet -->
   <link rel="stylesheet" href="styles.css?v=2025-12-13a" />
 </head>
 <body>
@@ -103,7 +102,7 @@
           the underlying mechanics are rarely discussed in detail. This site focuses on what’s under the hood.
         </p>
 
-        <p><strong>What We Believe</strong></p>
+        <h3>What We Believe</h3>
         <ul>
           <li>Traders should understand the tools they use</li>
           <li>Basic technical concepts shouldn’t require expensive subscriptions</li>
@@ -111,7 +110,7 @@
           <li>Education matters more than presentation</li>
         </ul>
 
-        <p><strong>What This Site Does</strong></p>
+        <h3>What This Site Does</h3>
         <ul>
           <li>Explains what an indicator actually measures</li>
           <li>Describes how it’s constructed at a conceptual level</li>
@@ -122,17 +121,8 @@
 
         <hr class="doc-divider" />
 
-        <p><strong>Open Indicator Lab is not a signal service, a paid course, or a promise of profitability.</strong></p>
-        <p>We don’t provide alerts, trade calls, or shortcuts.</p>
-        <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
-        <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
-      </div>
-    </section>
-
-    <!-- COMMON MISCONCEPTIONS -->
-    <section id="misconceptions" class="section">
-      <div class="container">
-        <h2>Common Misconceptions</h2>
+        <!-- COMMON MISCONCEPTIONS MOVED UP -->
+        <h2 id="misconceptions">Common Misconceptions</h2>
 
         <p><strong>“Proprietary” means unique or complex.</strong></p>
         <p>
@@ -169,6 +159,16 @@
           Popularity often reflects marketing reach and presentation.
           Understanding how the indicator works matters more than how widely it’s promoted.
         </p>
+
+        <!-- DIVIDER BEFORE FINAL PHILOSOPHY BLOCK -->
+        <hr class="doc-divider" />
+
+        <!-- “WHAT THIS IS NOT” MOVED TO THE BOTTOM -->
+        <p><strong>Open Indicator Lab is not a signal service, a paid course, or a promise of profitability.</strong></p>
+        <p>We don’t provide alerts, trade calls, or shortcuts.</p>
+        <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
+        <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
+
       </div>
     </section>
 
