--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=2025-12-13a" />
+  <link rel="stylesheet" href="styles.css?v=2025-12-13b" />
 </head>
 <body>
 
@@ -87,6 +87,12 @@
             </div>
           </article>
         </div>
+
+        <!-- subtle TradingView-style note -->
+        <p class="section-intro" style="margin-top:1.6rem; font-style:italic;">
+          More indicators will be added as they’re developed and published.
+        </p>
+
       </div>
     </section>
 
@@ -102,7 +108,7 @@
           the underlying mechanics are rarely discussed in detail. This site focuses on what’s under the hood.
         </p>
 
-        <h3>What We Believe</h3>
+        <h3 class="doc-subhead">What We Believe</h3>
         <ul>
           <li>Traders should understand the tools they use</li>
           <li>Basic technical concepts shouldn’t require expensive subscriptions</li>
@@ -110,7 +116,7 @@
           <li>Education matters more than presentation</li>
         </ul>
 
-        <h3>What This Site Does</h3>
+        <h3 class="doc-subhead">What This Site Does</h3>
         <ul>
           <li>Explains what an indicator actually measures</li>
           <li>Describes how it’s constructed at a conceptual level</li>
@@ -119,10 +125,13 @@
           <li>Explains how traders commonly recreate similar behavior manually</li>
         </ul>
 
-        <hr class="doc-divider" />
+      </div>
+    </section>
 
-        <!-- COMMON MISCONCEPTIONS MOVED UP -->
-        <h2 id="misconceptions">Common Misconceptions</h2>
+    <!-- COMMON MISCONCEPTIONS -->
+    <section id="misconceptions" class="section">
+      <div class="container">
+        <h2>Common Misconceptions</h2>
 
         <p><strong>“Proprietary” means unique or complex.</strong></p>
         <p>
@@ -160,10 +169,8 @@
           Understanding how the indicator works matters more than how widely it’s promoted.
         </p>
 
-        <!-- DIVIDER BEFORE FINAL PHILOSOPHY BLOCK -->
         <hr class="doc-divider" />
 
-        <!-- “WHAT THIS IS NOT” MOVED TO THE BOTTOM -->
         <p><strong>Open Indicator Lab is not a signal service, a paid course, or a promise of profitability.</strong></p>
         <p>We don’t provide alerts, trade calls, or shortcuts.</p>
         <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
