--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=2025-12-13b" />
+  <link rel="stylesheet" href="styles.css?v=2025-12-13c" />
 </head>
 <body>
 
@@ -88,7 +88,7 @@
           </article>
         </div>
 
-        <!-- subtle TradingView-style note -->
+        <!-- TradingView-style note -->
         <p class="section-intro" style="margin-top:1.6rem; font-style:italic;">
           More indicators will be added as they’re developed and published.
         </p>
@@ -125,13 +125,10 @@
           <li>Explains how traders commonly recreate similar behavior manually</li>
         </ul>
 
-      </div>
-    </section>
+        <!-- divider restored here -->
+        <hr class="doc-divider" />
 
-    <!-- COMMON MISCONCEPTIONS -->
-    <section id="misconceptions" class="section">
-      <div class="container">
-        <h2>Common Misconceptions</h2>
+        <h2 id="misconceptions">Common Misconceptions</h2>
 
         <p><strong>“Proprietary” means unique or complex.</strong></p>
         <p>
@@ -169,6 +166,7 @@
           Understanding how the indicator works matters more than how widely it’s promoted.
         </p>
 
+        <!-- divider before philosophy block -->
         <hr class="doc-divider" />
 
         <p><strong>Open Indicator Lab is not a signal service, a paid course, or a promise of profitability.</strong></p>
